--- a/Demo_FileIO.Login/Demo_FileIO.Login.csproj
+++ b/Demo_FileIO.Login/Demo_FileIO.Login.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Logins.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
